Date on sidebar

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         }
         cityName = value;
         document.getElementById("city").value=cityName;
+        Current_Date();
      }
 
 
